--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
                         <img class="relative" src="images/Frame.png" alt="emale">
                     </div>
                     <h4>Email</h4>
-                    <p><a href="mailto:education@yahoo.edu.ge">education@yahoo.edu.ge</a></p>
-                    <p><a href="mailto:edu.e.education@yahoo.edu.ge">edu.e.education@yahoo.edu.ge</a></p>
+                    <p><a class="mid-tag" href="mailto:education@yahoo.edu.ge">education@yahoo.edu.ge</a></p>
+                    <p><a class="mid-tag" href="mailto:edu.e.education@yahoo.edu.ge">edu.e.education@yahoo.edu.ge</a></p>
                 </div>
                 <div class="info-box">
                     <div class="circle">
                         <img class="relative" src="images/Phone 2.png" alt="plhone">
                     </div>
                     <h4>Phone</h4>
-                    <p><a href="tel:+995 591 66 6456">+995 591 66 6456</a></p>
-                    <p><a href="tel:+995 591 66 6876">+995 591 66 6876</a></p>
+                    <p><a class="mid-tag" href="tel:+995 591 66 6456">+995 591 66 6456</a></p>
+                    <p><a class="mid-tag" href="tel:+995 591 66 6876">+995 591 66 6876</a></p>
                 </div>
                 <div class="info-box">
                     <div class="circle">
                         <img class="relative" src="images/Frame (2).png" alt="location">
                     </div>
                     <h4>Location</h4>
-                    <p>Mail str, Chicago iinois</p>
-                    <p>Main street, New York City</p>
+                    <a class="mid-tag" href="https://www.google.com/maps/place/Georgian+American+University+(GAU)/@41.7170226,44.786132,17.5z/data=!4m6!3m5!1s0x404472d4fb9f5e75:0x7bffbbb9bcb2a6b9!8m2!3d41.717787!4d44.7849083!16s%2Fg%2F11f37g0zzf?entry=ttu" target="_blank">Mail str, Chicago iinois</a>
+                    <a class="mid-tag" href="https://www.google.com/maps/place/Georgian+American+University+(GAU)/@41.7170226,44.786132,17.5z/data=!4m6!3m5!1s0x404472d4fb9f5e75:0x7bffbbb9bcb2a6b9!8m2!3d41.717787!4d44.7849083!16s%2Fg%2F11f37g0zzf?entry=ttu" target="_blank">Main street, New York City</a>
                 </div>
                 
             </div>
@@ -71,8 +71,49 @@
             </div>
     </section>
     <footer>
-        <div class="container bot">
-            
+        <div class="container-bot">
+            <div class=" bot-info">
+                <div class="hotels">
+                    <h5>Zwtta Hotels</h5>
+                    <p>Our hotel in on teh huge quality
+                        and proffesionalism and with hard
+                        work and cearing. You can accept
+                        only the best services from our stuff</p>
+                        <div class="logo">
+                            <img src="images/Ellipse 5.png" alt="">
+                            <img src="images/Ellipse 6.png" alt="">
+                            <img src="images/Ellipse 7.png" alt="">
+                        </div>
+                </div>
+                <div>
+                    <h6>Useful links</h6>
+                    <nav>
+                        <ul>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Rooms</a></li>
+                            <li><a href="#">Gift Card</a></li>
+                            <li><a href="#">Testimonials</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div>
+                    <h6>Privacy</h6>
+                    <nav>
+                        <ul>
+                            <li><a href="#">Career</a></li>
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Contact us</a></li>
+                            <li><a href="#">Services</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="mail">
+                    <h6>Contact Info</h6>
+                        <p class="p-margin"><a class="pseudo mail2" href="mailto:info@yahoo.com">info@yahoo.com</a></p>
+                        <p class="p-margin"><a class="pseudo tel " href="tel:+ 995 591111 999">+ 995 591111 999</a></p>
+                        <a class="pseudo map" href="https://www.google.com/maps/place/Georgian+American+University+(GAU)/@41.7170226,44.786132,17.5z/data=!4m6!3m5!1s0x404472d4fb9f5e75:0x7bffbbb9bcb2a6b9!8m2!3d41.717787!4d44.7849083!16s%2Fg%2F11f37g0zzf?entry=ttu" target="_blank">Main str. Chicago Illinois</a>
+                </div>
+            </div>
 
         </div>
     </footer>
